--- a/src/localization/locale.json
+++ b/src/localization/locale.json
@@ -41,7 +41,9 @@
 		"menu_number_systems": "Перевод чисел в различные СИ",
 		"about_page": "О проекте",
 
-		"text_about_page": "CalculatorProject - учебный проект группы S101, а это его модифицированная версия.\nИсходный код проекта доступен на репозитории GitHub - https://github.com/alexgolovin2010-droid/CalculatorProject/"
+		"text_about_page": "CalculatorProject - учебный проект группы S101, а это его модифицированная версия.\nИсходный код проекта доступен на репозитории GitHub - https://github.com/alexgolovin2010-droid/CalculatorProject/",
+
+		"exit": "Выйти"
 	},
 
 	"en_US": {
@@ -86,6 +88,8 @@
     	"menu_number_systems": "Convert numbers between different numeral systems",
 		"about_page": "About the project",
 
-		"text_about_page": "CalculatorProject is a S101 class project, and this is a modified version of it.\nThe project's source code is available in the GitHub repository - https://github.com/alexgolovin2010-droid/CalculatorProject/"
+		"text_about_page": "CalculatorProject is a S101 class project, and this is a modified version of it.\nThe project's source code is available in the GitHub repository - https://github.com/alexgolovin2010-droid/CalculatorProject/",
+
+		"exit": "Exit"
 	}
 }
